# goit-ds-hw-03

task_1/: main.py  pyproject.toml  sample_cats.json
task_1/modules/: __init__.py  handle_exceptions.py  handlers.py
task_2/: authors.json  main.py  pyproject.toml
task_2/spiders/: __init__.py  decorator_excp.py  spiders.py
